# WakeWord_and_MicroStream_lib_for_python

./: Cargo.toml  README.md  main.py  tree.txt
src/: lib.rs
